# CG

./: .gitignore  main.py  solve.py  test.json
pyutils26/: .pre-commit-config.yaml  CMakeUserPresets.json  README.md  build.sh  example.ipynb  example_verification.ipynb  example_zip.ipynb  pyproject.toml  setup.py
pyutils26/.conan/release/: Boost-Target-release.cmake  Boost-release-x86_64-data.cmake  BoostConfig.cmake  CMakePresets.json  Eigen3-Target-release.cmake  Eigen3-release-x86_64-data.cmake  Eigen3Config.cmake  cgal-Target-release.cmake  cgal-config.cmake  cgal-release-x86_64-data.cmake  cgalTargets.cmake  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conandeps_legacy.cmake  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  fmt-release-x86_64-data.cmake  gmp-Target-release.cmake  gmp-config.cmake  gmp-release-x86_64-data.cmake  libbacktrace-release-x86_64-data.cmake  module-BZip2-release-x86_64-data.cmake  module-ZLIB-release-x86_64-data.cmake  mpfr-Target-release.cmake  mpfr-config-version.cmake  mpfr-config.cmake  mpfr-release-x86_64-data.cmake  mpfrTargets.cmake
pyutils26/.github/workflows/: pytest_linux.yml  pytest_windows.yml
pyutils26/cgshop2026_pyutils.egg-info/: SOURCES.txt  requires.txt
pyutils26/src/cgshop2026_pyutils/: verify.py  visualize.py
pyutils26/src/cgshop2026_pyutils.egg-info/: PKG-INFO  SOURCES.txt
pyutils26/tests/: test_imports.py  test_verify.py
pyutils26/tests/geometry/: test_compute_triangles.py  test_flip_partner_map.py  test_flippable_triangulation.py  (+1 more)
(+38 files in other folders)
