[build-system]
requires = [
    "conan>=2.0.0",
    "setuptools",
    "scikit-build>=0.17.3",
    "skbuild-conan",
    "cmake>=3.23",
    "ninja",
]
build-backend = "setuptools.build_meta"

[tool.pyright]
ignore = ["src/cgshop2026_pyutils/geometry/draw.py", "src/cgshop2026_pyutils/visualize.py"]

reportUnusedCallResult = false
reportPrivateUsage = false
reportImplicitStringConcatenation = false
